apps/iris/deployment-default-iris-valkey.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: iris
    component: valkey
  name: iris-valkey
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: iris
      component: valkey
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: iris
        component: valkey
    spec:
      automountServiceAccountToken: true
      containers:
      - image: valkey/valkey:8-alpine
        imagePullPolicy: IfNotPresent
        name: valkey
        ports:
        - containerPort: 6379
          name: valkey
          protocol: TCP
        resources:
          limits:
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
