apps/iris/service-default-iris-stream-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-stream-worker
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: iris
    component: stream-worker
    managed-by: terraform
  ports:
  - name: grpc
    port: 9090
    targetPort: grpc
    protocol: TCP
  - name: http
    port: 9091
    targetPort: http
    protocol: TCP
