apps/iris/service-default-iris.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iris
    component: server
  name: iris
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: iris
    component: server
  sessionAffinity: None
  type: ClusterIP
